2009-03-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Catch `tramp-loading', when a loading of a
	package fails.
	(tramp-end-of-output): Remove newlines, and add "$" at the end.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Quote `tramp-end-of-output'.
	(tramp-wait-for-output): Remove handling of newlines.

	* tramp-gvfs.el (top): Add methods to `tramp-methods' after
	loading only.  Throw `tramp-loading', when GVFS daemon does not run.

2009-03-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-path): Add choice "Private Directories".
	(tramp-check-for-regexp): Both echoes must be present, before
	removing.
	(tramp-get-remote-path): Handle also `tramp-own-remote-path'.

2009-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Remove "Tramp connection
	closed" option.
	(tramp-maybe-open-connection): Use the same command pattern for
	first hop and further hops.

2009-02-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-coding-commands): Add "base64".  (Bug#2463)

2009-02-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Require tramp-gvfs.
	(tramp-handle-process-file): Handle QUIT.

	* tramp-gvfs.el (tramp-gvfs-handle-write-region): Fix scoping error.

2009-02-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-zeroconf-domain): New defcustom.
	(top): Use it for zeroconf initialization.
	(tramp-gvfs-handle-make-directory): Use GVFS utilities in error
	case.
	(tramp-gvfs-handle-set-file-modes): Surround with
	`with-tramp-gvfs-error-message filename'.
	(tramp-gvfs-handle-write-region): Add trace messages.

2009-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (top): Require also 'url-parse and 'zeroconf.  Add
	completion function for "dav" and "davs" methods.
	(tramp-gvfs-url-file-name)
	(tramp-zeroconf-parse-workstation-device-names)